[package]
name = "fc-mapping-sync"
version = "2.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"
description = "Mapping sync logic for Frontier."
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.25"
futures-timer = "3.0.1"
log = "0.4.17"
# Substrate
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false   }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false   }
# Frontier
fc-db = { path = "../db" }
fp-consensus = { version = "2.0.0-dev", path = "../../evm-primitives/consensus" ,default-features = false}
fp-rpc = { version = "3.0.0-dev", path = "../../evm-primitives/rpc",default-features = false }