[package]
name = "fc-rpc"
version = "2.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { version = "0.14.0", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false }
evm = { version = "0.37.0", default-features = false }
futures = "0.3.25"
hex = "0.4.3"
jsonrpsee = "0.16.2"
libsecp256k1 = "0.7.1"
log = "0.4.17"
lru = "0.8.1"
prometheus = { version = "0.13.1", default-features = false }
rand = "0.8"
rlp = { version = "0.5", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
tokio = { version = "1.24", features = ["sync"] }

# Substrate
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false   }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false   }

sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false   }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false   }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false   }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false   }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false   }
sp-runtime ={ git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false   }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false   }
# Frontier
fp-ethereum = { version = "1.0.0-dev", path = "../../evm-primitives/ethereum", default-features = false }
fc-db = { path = "../db" }
fc-rpc-core = { version = "1.1.0-dev", path = "../../evm-client/rpc-core" }
fp-rpc = { version = "3.0.0-dev", path = "../../evm-primitives/rpc" }
fp-storage = { version = "2.0.0", path = "../../evm-primitives/storage" }

[dev-dependencies]
tempfile = "3.3.0"
# Substrate
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false   }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false   }
sp-consensus ={ git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false   }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }

[features]
rpc-binary-search-estimate = []
