[package]
name = "pallet-evm"
version = "0.9.36"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
description = "FRAME EVM contracts pallet."
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
environmental = { version = "1.1.3", default-features = false, optional= true }
evm = { version = "0.37.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = { version = "0.4.17", default-features = false }
rlp = { version = "0.5", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }

# Substrate
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36",default-features = false}
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36",default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
# Substrate FRAME
frame-benchmarking ={ git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }

# Frontier
fp-evm = { version = "3.0.0-dev", path = "../../evm-primitives/evm", default-features = false }

[dev-dependencies]
# Substrate
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-evm-precompile-simple = { version = "2.0.0-dev", path = "../evm/precompile/simple", default-features = false }

[features]
default = ["std"]
std = [
	"environmental?/std",
	"evm/std",
	"evm/with-serde",
	"hex/std",
	"log/std",
	"rlp/std",
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	# Frontier
	"fp-evm/std",
	"pallet-balances/std",

]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks"

]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-balances/try-runtime"

]
forbid-evm-reentrancy = ["dep:environmental"]
