[package]
name = "fp-dynamic-fee"
version = "1.0.0"
license = "Apache-2.0"
edition = "2021"
description = "Dynamic fee inherent primitives for Ethereum RPC (web3) compatibility layer for Substrate."
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1"
# Substrate
sp-core = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git", branch = "mainnet-peer", default-features = false   }
sp-inherents = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git", branch = "mainnet-peer" , default-features = false  }

[features]
default = ["std"]
std = [
	# Substrate
	"sp-core/std",
	"sp-inherents/std",
]
