[package]
name = "vine-node-jaeger"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "peer Jaeger primitives, but equally useful for Grafana/Tempo"

[dependencies]
mick-jaeger = "0.1.8"
lazy_static = "1.4"
parking_lot = "0.12.0"
vine-primitives = { path = "../../primitives" }
vine-node-primitives = { path = "../primitives" }
sc-network = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git", branch = "mainnet-peer" }
sp-core = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git", branch = "mainnet-peer" }
thiserror = "1.0.31"
tokio = "1.22.0"
log = "0.4.17"
parity-scale-codec = { version = "3.1.5", default-features = false }
